15 Dec 2011: Wouter
	- detailprints in windows installer and uninstaller.
	- stoppanels waits for the connection of the panel to close, this
	  may remove re-install race conditions.

14 Dec 2011: Wouter
	- Set hook throttleinterval to 1 second, this reduces the osx wakeup
	  and bootup wrong probes because the hook was throttled for 10 seconds.

13 Dec 2011: Wouter
	- release 0.8.
	- trunk is 0.9 under development.

12 Dec 2011: Wouter
	- Fix apple brick by installer, because of tarfile inclusion of
	  extended attributes that overwrote system dir extended attributes.

5 Dec 2011: Wouter
	- sigHUP reloads config and reopens logfile for log rotation support.
	- acxnlnetlabs updated to version 17.
	- fix fedora16 windows crosscompile.
	- fix double definition of malloc.

2 Dec 2011: Wouter
	- configure generated with autoconf 2.6.8.

30 Nov 2011: Wouter
	- Fix where race condition could cause blacklist of open resolver.
	- Fix to flush_infra and flush_requestlist when we use open resolver,
	  the proxy that causes this to be used as fallback has polluted those
	  entries (possibly).

29 Nov 2011: Wouter
	- Fix bug where no IPv6 causes wrong test results, notably SSL, due
	  to the error report code.

13 Nov 2011: Wouter
	- control unsafe shows the dialog popup again.

9 Nov 2011: Wouter
	- Fix that if network down (nothing pings) then it picks disconnect,
	  for slow bootup where the machine has the previous network settings.

8 Nov 2011: Wouter
	- the test_tcp and test_ssl command do not have the 20-sec tcpretry
	  once timer, so that the test can try unbound.
	- config for new open resolver (port 80 TCP, port 443 SSL).  No more
	  probe plain tcp on port 443.

7 Nov 2011: Wouter
	- fixed the OSX installer problem, launchd does not load userspace
	  agents without hacks, and has side-effects that enables boot-start.
	- more detailed logging at verbosity 4 (prints wire and dig output).

4 Nov 2011: Wouter
	- on OSX update config if old (no ssl443).