@@ -1,3 +1,6 @@
+16 Dec 2011: Wouter
+	- attempt to fix endless loop on windows (reported by Alan Clegg).
+
 15 Dec 2011: Wouter
 	- detailprints in windows installer and uninstaller.
 	- stoppanels waits for the connection of the panel to close, this
